# elliot-and-neo-wave-ai-analyzer-using-deepinfra

./: .env.example  .gitignore  ARCHITECTURE.md  ELLIOTT_RULES.md  LICENSE  README.md  docker-compose.yml
backend/: .dockerignore  Dockerfile  README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/app/: __init__.py  main.py
backend/app/agents/: __init__.py  deps.py  elliott_agent.py  events.py  llm.py  neowave_agent.py  orchestrator.py  prompts.py  safety.py  synthesis_agent.py
backend/app/api/: deps.py  router.py  runs.py  sessions.py  upload.py
backend/app/core/: config.py  disclaimer.py  health_checks.py  logging.py
backend/app/preprocessing/: __init__.py  channels.py  csv_loader.py  fibonacci.py  indicators.py  pivots.py  structure.py  swings.py  validators.py
backend/app/rules/: __init__.py  config.py  elliott_rules.py  neowave_rules.py  types.py
backend/app/schemas/: analyze.py  chart.py  input.py  levels.py  report.py  responses.py  structure.py  synthesis.py  timeframe.py  upload.py  validated.py  waves.py
backend/app/services/: cache.py  pivot_decorator.py  runs.py  validator.py
backend/app/upload/: sessions.py  storage.py
backend/scripts/: dump_config.py  dump_structure.py  fetch_nifty_daily.py  run_elliott_agent.py  run_full_pipeline.py  run_per_timeframe.py  smoke_ws_run.py
backend/tests/: conftest.py
backend/tests/agents/: test_elliott_agent.py  test_neowave_agent.py  test_orchestrator.py  test_synthesis_agent.py
backend/tests/api/: test_runs.py  test_upload.py
backend/tests/preprocessing/: test_csv_loader.py  test_pivots_and_structure.py  test_validators.py
backend/tests/rules/: conftest.py  test_elliott_rules.py  test_neowave_rules.py
backend/tests/services/: test_pivot_decorator.py  test_validator.py
samples/: NIFTY_1D.csv  NIFTY_1M.csv  README.md
web/: .dockerignore  Dockerfile  next.config.ts  package.json  tsconfig.json
web/app/: error.tsx  globals.css  layout.tsx  not-found.tsx  page.tsx  providers.tsx
web/app/about/: page.tsx
web/app/analyze/[run_id]/: page.tsx
web/app/api/health/: route.ts
web/components/: agent-row.tsx  disclaimer-banner.tsx  dropzone.tsx  file-row.tsx  price-chart.tsx  report-methodology.tsx  report-overview.tsx  report-timeframe.tsx  theme-toggle.tsx
web/components/ui/: badge.tsx  button.tsx  card.tsx  input.tsx  select.tsx  tabs.tsx
web/lib/: api.ts  report-types.ts  schemas.ts  timeframes.ts  use-run-events.ts  utils.ts
(+1 files in other folders)
