[project]
name = "wave-agent-backend"
version = "0.1.0"
description = "Multi-agent Elliott Wave + NEOWave structural analysis (educational engineering demo, not investment advice)."
readme = "README.md"
requires-python = ">=3.12,<3.13"
license = { text = "MIT" }

dependencies = [
    # Web framework
    "fastapi>=0.115,<1",
    "uvicorn[standard]>=0.32,<1",
    "python-multipart>=0.0.20,<1",
    "websockets>=14,<16",

    # Validation / schemas
    "pydantic>=2.9,<3",
    "pydantic-settings>=2.6,<3",

    # Persistence
    "sqlalchemy>=2.0,<3",
    "alembic>=1.14,<2",
    "psycopg[binary]>=3.2,<4",
    "redis>=5.2,<6",

    # HTTP / LLM
    "httpx>=0.28,<1",
    "anthropic>=0.40,<1",
    "pydantic-ai>=0.0.20",

    # Numeric / data
    "pandas>=2.2,<3",
    "numpy>=2.0,<3",
    "scipy>=1.14,<2",

    # Logging / config
    "structlog>=24.4,<26",
    "python-dotenv>=1.0,<2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3,<9",
    "pytest-asyncio>=0.24,<1",
    "pytest-cov>=6.0,<7",
    "ruff>=0.7,<1",
    "mypy>=1.13,<2",
    "types-redis>=4.6,<5",
    "pandas-stubs>=2.2,<3",
    "scipy-stubs>=1.14,<2",
]

[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "UP",   # pyupgrade
    "RUF",  # ruff-specific
    "SIM",  # flake8-simplify
    "TID",  # flake8-tidy-imports
    "PL",   # pylint subset
]
ignore = [
    "E501",   # line length handled by formatter
    "PLR0913", # too many args (common in agent constructors)
    "PLR2004", # magic value (common in financial constants)
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["PLR2004", "S101", "TID252"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.12"
strict = true
warn_unreachable = true
plugins = ["pydantic.mypy"]
files = ["app"]

[[tool.mypy.overrides]]
module = ["scipy.*", "pydantic_ai.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-q --strict-markers"
filterwarnings = ["error"]
